added game scene and munchie guardian sprite

--- a/munchieguardian2/index.html
+++ b/munchieguardian2/index.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>munchieguardian2</title>
+    <title>munchieguardian2</title>
+    <style>
+        body {
+            margin: 10;
+            overflow: hidden;
+            align-content: center;
+            text-align: center;
+        }
+        canvas {
+            border-radius: 32px;
+        }
+    </style>
 </head>
-<body style="overflow:hidden">
+<body>
 <script src="src/main.js" type="module"></script>
 </body>
 </html>
