fixed game screensize and added charge attack code
no graphics yet for the charge attack (not even a placeholder image...) but ill add one later and kaplay docs for loop, time, and wait lowkey fried  me but we ball

--- a/munchieguardian2/index.html
+++ b/munchieguardian2/index.html
@@ -4,14 +4,13 @@
     <title>munchieguardian2</title>
     <style>
         body {
-            margin: 10;
             overflow: hidden;
             align-content: center;
             text-align: center;
         }
-        canvas {
+        /* canvas {
             border-radius: 32px;
-        }
+        } */
     </style>
 </head>
 <body>
